[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/icons/game modes/orig/luksong-baka-icon.png" type="Texture" id=1]
[ext_resource path="res://ui/icons/game modes/orig/langit-lupa-icon.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/game modes/orig/sipa-icon.png" type="Texture" id=3]
[ext_resource path="res://ui/icons/game modes/orig/palosebo-icon.png" type="Texture" id=4]
[ext_resource path="res://ui/gameselect.gd" type="Script" id=5]

[sub_resource type="Theme" id=1]

[node name="ScrollContainer" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 6140.0
margin_bottom = 756.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_top = 128.0
margin_right = 6140.0
margin_bottom = 628.0
mouse_filter = 2
custom_constants/margin_right = 1920
custom_constants/margin_left = 1920

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer"]
margin_left = 1920.0
margin_right = 4220.0
margin_bottom = 500.0
mouse_filter = 2
custom_constants/separation = 100

[node name="palosebo" type="TextureButton" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 0 )
mouse_filter = 1
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/HBoxContainer/palosebo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -44.0
margin_right = 13.0
margin_bottom = -13.0
theme = SubResource( 1 )
text = "Palo Sebo
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="langitlupa" type="TextureButton" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 600.0
margin_right = 1100.0
margin_bottom = 500.0
mouse_filter = 1
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/HBoxContainer/langitlupa"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -44.0
margin_right = 13.0
margin_bottom = -13.0
theme = SubResource( 1 )
text = "
Langit Lupa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="luksongbaka" type="TextureButton" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 1200.0
margin_right = 1700.0
margin_bottom = 500.0
mouse_filter = 1
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/HBoxContainer/luksongbaka"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -44.0
margin_right = 13.0
margin_bottom = -13.0
theme = SubResource( 1 )
text = "Luksong Baka
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sipa" type="TextureButton" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 1800.0
margin_right = 2300.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 0 )
mouse_filter = 1
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/HBoxContainer/sipa"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -44.0
margin_right = 13.0
margin_bottom = -13.0
theme = SubResource( 1 )
text = "Sipa
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/palosebo" to="." method="_on_palosebo_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/langitlupa" to="." method="_on_langitlupa_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/luksongbaka" to="." method="_on_luksongbaka_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/sipa" to="." method="_on_sipa_pressed"]
